# modernaicourse_hw_rust

./: Cargo.toml  IMPLEMENTATION.md  README.md
hw0/: Cargo.toml
hw0/src/: lib.rs
hw0/tests/: hw0_tests.rs
hw1/: Cargo.toml
hw1/src/: lib.rs
hw1/tests/: hw1_tests.rs
hw2/: Cargo.toml
hw2/src/: lib.rs
hw2/tests/: hw2_tests.rs
hw3/: Cargo.toml
hw3/src/: lib.rs
hw3/tests/: hw3_tests.rs
hw4/: Cargo.toml
hw4/src/: lib.rs
hw4/tests/: hw4_tests.rs
hw5/: Cargo.toml
hw5/src/: lib.rs
hw5/tests/: hw5_tests.rs
hw6/: Cargo.toml
hw6/src/: lib.rs
hw6/tests/: hw6_tests.rs
hw7/: Cargo.toml
hw7/src/: lib.rs
hw7/tests/: hw7_tests.rs
