[workspace]
members = [
    "hw0",
    "hw1",
    "hw2",
    "hw3",
    "hw4",
    "hw5",
    "hw6",
    "hw7",
]
resolver = "2"

[workspace.dependencies]
approx = "0.5"
rand = "0.8"
rand_distr = "0.4"
ndarray = "0.16"
candle-core = "0.8"
candle-nn = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
hf-hub = "0.4"
flate2 = "1.0"
tokenizers = "0.20"
