[workspace]
members = ["hw0", "hw1", "hw2", "hw3", "hw4", "hw5", "hw6", "hw7"]
resolver = "2"

[workspace.dependencies]
approx = "0.5.1"
rand = "0.10.1"
rand_distr = "0.6.0"
ndarray = "0.17.2"
ndarray-stats = "0.7.0"
candle-core = "0.10.2"
candle-nn = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
hf-hub = "0.5.0"
flate2 = "1.1.9"
reqwest = { version = "0.12", features = ["blocking"] }
tokenizers = "0.23.1"
