[package]
name = "hw5"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
tempfile = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
