[package]
name = "hw7"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
tempfile = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
